crates/tui/snapshots/shared/welcome/pet/welcome_pet_terminal_cells.snap
---
source: crates/tui/src/app/welcome/pet_tests.rs
expression: "pet_cell_map(super::pet::sprite())"
---
symbols
..▄..▄..
▗█▛██▜█▖
▝▜████▛▘
..▝..▘..
foreground
..B..B..
BBBBBBBB
BBBBBBBB
..B..B..
background
........
.KKKKKK.
........
........
